# MultiCameraTracking

./: .dockerignore  .env.template  .gitignore  BACKUP_SYSTEM.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  acquisition_diagnostics.sh  backup_config.example.yaml  backup_manager.sh  datajoint_config.json  docker-compose.yml  dual_recording_ieee1588.py  pyproject.toml  requirements.txt  run_annotate.sh  run_tests.sh  set_mtu.sh  setup.py  template.datajoint_config.json
.devcontainer/: devcontainer.json  post-create.sh
annotation_frontend/src/: AnnotationApi.js
apps/: visualize.py  visualize_easymocap.py
dashboard/: mmc_annotation_dashboard.py  monitor_annotation.py  monitor_mmc_pipeline.py
docker/: Dockerfile  Dockerfile.annotation  download_flir.sh  download_flir_310.sh  start_acquisition_gui.sh
docker/entrypoints/: run_annotate.sh  run_reset.sh  start_acquisition_gui.sh
docs/: README.md  index.md  notebook_changes_aruco_integration.md
docs/acquisition/: acquisition_diagnostics.md  acquisition_hardware.md  acquisition_software_setup.md  acquisition_startup.md  automated_setup.md  bill_of_materials.md  dhcp_setup.md  docker_setup.md  example_config.md  general_system_setup.md  persistent_settings.md  spinnaker_app_setup.md  startup_script.md  test_results_analysis.md  troubleshooting.md
docs/analysis/: processing_pipeline.md  smpl_setup.md
docs/annotation/: annotation_software_setup.md  annotation_startup.md  windows_modifications.md
docs/calibration/: calibration_procedure.md
docs/gaitrite_comparison_writeup/: gaitrite_comparison_writeup.ipynb  populate_gaitrite_analysis.py
frontend/acquisition/: package.json
frontend/annotation/: package-lock.json  package.json
model_data/: .gitignore
models/Rajagopal2015_Halpe/: Rajagopal2015_Halpe.osim
multi_camera/: Charuco.ipynb
multi_camera/acquisition/: cameras_reset.py  flir_recording_api.py  health.py  record.py  recording_db.py  rest_backend.py
multi_camera/analysis/: aruco.py  aruco_validation.py  calibration.py  camera.py  easymocap.py  fit_quality.py  gaitrite_comparison.py  mvmp1f.yml  mvmp1f_fallback1.yml  mvmp1f_fallback2.yml  mvmp1f_fallback3.yml  mvmp1f_fallback4.yml  opensim.py  optimize_reconstruction.py  reconstruction.py
multi_camera/backend/: README.md  annotation.py  backup_manager.py  biomechanics.py  fastapi.py  fastapi_annotation.py  (+3 more)
react_frontend/: package-lock.json  package.json
scripts/: backup_db_queries.py  backup_sync.py  mocap_openpose.py  session_pipeline.py  validate_aruco.py
tests/: test_camera.py  test_data_integrity.py
utils/: MultiCameraLauncher.desktop  multi_camera_launcher.sh
(+159 files in other folders)
