[project]
name = "multi_camera"
version = "2025.12.03"
description = "Library for multi-camera acquisition and analysis."
authors = [
  {name = "James Cotton", email = "peabody124@gmail.com"},
  {name = "Kunal Shah", email = "kshah@sralab.org"},
  ]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aniposelib>=0.7.0",
    "colorlog>=6.8.2",
    "dash>=3.1.1",
    "datajoint>=0.14.3",
    "einops>=0.8.0",
    "fastapi[all]>=0.99.1",
    "flax>=0.7.2",
    "jax>=0.4.13",
    "jaxlib>=0.4.13",
    "jaxlie>=1.4.2",
    "jaxopt>=0.8.3",
    "llvmlite>=0.41.1",
    "matplotlib>=3.7.5",
    "numba>=0.58.1",
    "numpy>1.24",
    "opencv-contrib-python>=4.11.0.86",
    "optax>=0.1.8",
    "pillow>10",
    "plotly>=6.1.2",
    "pyyaml>=6.0.2",
    "scipy>=1.15.2",
    "simple-pyspin>=0.1.1",
    "sqlalchemy>=2.0.35",
    "tqdm>4.6"
]

[tool.uv]
find-links = ["https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"